# lantern

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build_make.sh  build_mingw_make.bat  build_vs12.bat  build_vs14.bat  build_xcode.sh
cmake/: FindSDL2.cmake  FindSDL2IMAGE.cmake
examples/empty_app/: main.cpp
examples/rasterized_triangle_app/: main.cpp
examples/rotating_car_app/: main.cpp
include/: camera.h  matrix3x3.h  matrix4x4.h  vector3.h  vector4.h
lantern/include/: aabb.h  app.h  bitmap_painter.h  camera.h  color.h  color_shader.h  common_math.h  font.h  geometry_stage.h  geometry_utils.h  line.h  math_common.h  matrix3x3.h  matrix4x4.h  merging_stage.h  mesh.h  mesh_attribute_info.h  obj_import.h  pipeline.h  point.h  rasterizing_stage.h  renderer.h  scene.h  scene_object.h  shader.h  texture.h  texture_shader.h  ui_element_base.h  ui_label.h  ui_label_shader.h  vector2.h  vector3.h  vector4.h
lantern/include/math/: line.h  math_common.h  matrix3x3.h  vector2.h
lantern/include/rendering/: camera.h  color.h  merger.h  pipeline.h  rendering_options.h  texture.h
lantern/include/rendering/geometry/: mesh.h  mesh_attribute_info.h
lantern/include/rendering/rasterizing/: rasterizer_common.h  rasterizer_homogeneous.h  rasterizer_inversed_slope.h  rasterizer_traversal_aabb.h  rasterizer_traversal_backtracking.h  rasterizer_traversal_common.h  rasterizer_traversal_zigzag.h
lantern/include/rendering/shaders/: color_shader.h  texture_shader.h  ui_label_shader.h
lantern/include/rendering/ui/: ui_element_base.h  ui_label.h
lantern/src/: app.cpp  bitmap_painter.cpp  camera.cpp  color.cpp  font.cpp  geometry_stage.cpp  line.cpp  matrix3x3.cpp  matrix4x4.cpp  merging_stage.cpp  mesh.cpp  obj_import.cpp  pipeline.cpp  point.cpp  rasterizing_stage.cpp  renderer.cpp  scene.cpp  scene_object.cpp  shader.cpp  texture.cpp  ui_element_base.cpp  ui_label.cpp  vector2.cpp  vector3.cpp  vector4.cpp
lantern/src/math/: math_common.cpp  matrix3x3.cpp
lantern/src/rendering/: color.cpp  font.cpp  merger.cpp  pipeline.cpp  texture.cpp
lantern/src/rendering/geometry/: mesh.cpp
lantern/src/rendering/rasterizing/: rasterizer_traversal_common.cpp
lantern/src/rendering/ui/: ui_element_base.cpp  ui_label.cpp
src/: camera.cpp  matrix3x3.cpp  matrix4x4.cpp  vector3.cpp  vector4.cpp
tests/include/: assert_utils.h  common.h  util.h
tests/src/: bitmap_painter.cpp  camera.cpp  main.cpp  matrix3x3.cpp  matrix4x4.cpp  obj_import.cpp  pipeline.cpp  vector3.cpp  vector4.cpp
tests_src/: vector3.cpp  vector4.cpp
